--- a/cluster-plots.html
+++ b/cluster-plots.html
@@ -818,7 +818,7 @@ font-size: 10px;
         }, _scroll_shadow: function(v){
             return v ? 'box-shadow: 0px 3px 4px 0px #bbb;z-index: 1;' : '';
         }, _show: function(v){
-            return v>=0 ? '' : 'display: none;';
+            return v !== false && v>=0 ? '' : 'display: none;';
         }, highlight_group: function(group_num){
              let okey = this.groups[group_num];
              if(!okey){
