--- a/tile-element.html
+++ b/tile-element.html
@@ -198,12 +198,12 @@ pointer-events: none;
         <template is="dom-if" if="[[splitter_metrics]]">
             <cross-hair r="6" show_bars="1" x="[[splitter_metrics.x]]" y="[[splitter_metrics.y]]" w="[[splitter_metrics.w]]"></cross-hair>
         </template>
-        <managed-canvas ckey="[[group_model.rm_spa]]" fix_height="[[spa_rm_height]]"></managed-canvas>
+        <managed-canvas ckey="[[group_model.rm.spa]]" fix_height="[[spa_rm_height]]"></managed-canvas>
     </div>
     <div class="canvas_part_2">
         <div>
-            <managed-canvas ckey="[[group_model.rm_dir]]"></managed-canvas>
-            <managed-canvas ckey="[[group_model.rm_speed]]"></managed-canvas>
+            <managed-canvas ckey="[[group_model.rm.dir]]"></managed-canvas>
+            <managed-canvas ckey="[[group_model.rm.speed]]"></managed-canvas>
         </div>
         <managed-canvas ckey="[[group_model.tac]]"></managed-canvas>
     </div>
@@ -212,17 +212,13 @@ pointer-events: none;
         <div class='side'>
             <div class="flex"></div>
             <div class='caption'>
-                <div style$='[[_show(group_model.rm_spa_max)]]' class="caption_inner">
-                    [[group_model.rm_spa_max]]Hz
+                <div style$='[[_show(group_model.rm.spa_max)]]' class="caption_inner">
+                    [[group_model.rm.spa_max]]Hz
                     <div class="caption_inner-label">spa max</div>
                 </div>
-                <div style$='[[_show(group_model.rm_dir_max)]]' class="caption_inner">
-                    [[group_model.rm_dir_max]]Hz
+                <div style$='[[_show(group_model.rm.dir_max)]]' class="caption_inner">
+                    [[group_model.rm.dir_max]]Hz
                     <div class="caption_inner-label">dir max</div>
-                </div>
-                <div style$='[[_show(group_model.group_mean)]]' class="caption_inner">
-                    [[group_model.group_mean]]Hz
-                    <div class="caption_inner-label">mean</div>
                 </div>
                 <div class="caption_inner">[[group_model.n_spikes]]
                     <div class="caption_inner-label">n spikes</div>
