--- a/wave-plots.html
+++ b/wave-plots.html
@@ -97,8 +97,8 @@ var off_canv_dt = 2; //distance from t to t+1 on the wave
 var off_canv_wave_gap = 4; //horizontal and vertical gap between waves
 
 // These two are applied in css..the actual width used matches the pixels on the off_canv
-var on_canv_width = n_c*n_w*2;
-var on_canv_height = 128;
+var on_canv_w = n_c*n_w*2;
+var on_canv_h = 256; // this is absolutely critical, if it's smaller then drawimage is about 50x slower.
 
 var off_canv_count_increment = 0.00001;
 
@@ -127,7 +127,7 @@ return {
             v_color = texture2D(palette, vec2(wave_color_tex, 0.));
 
             //calculate the x coordiante in canvas coordinates
-            gl_Position.x = wave_xy_offset.x*(1./128.) -1. + (t_x_offset + delta_t_x_offset*is_t_plus_one);
+            gl_Position.x = wave_xy_offset.x*(1./128.) -1. + t_x_offset + delta_t_x_offset*is_t_plus_one;
 
             //calculate the y coordiante in canvas coordinates
             gl_Position.y = wave_xy_offset.y*(1./128.) -1. + voltage*y_factor;
@@ -156,7 +156,7 @@ return {
 
         void main(void) {
             //calculate the x coordiante in canvas coordinates
-            gl_Position.x = wave_xy_offset.x*(1./128.) -1. + (t_x_offset + delta_t_x_offset*is_t_plus_one);
+            gl_Position.x = wave_xy_offset.x*(1./128.) -1. + t_x_offset + delta_t_x_offset * is_t_plus_one;
 
             //calculate the y coordiante in canvas coordinates
             gl_Position.y = wave_xy_offset.y*(1./128.) -1. + voltage*y_factor;
@@ -197,7 +197,6 @@ return {
         void main() {
             highp vec4 src = texture2D(u_src, v_tex_coord);
             highp float counts = sqrt(src.r*normalising_factor*10.);
-            gl_FragColor = src;
             gl_FragColor = vec4(counts > 0.5 ?
                                      counts > 0.75 ?
                                          4. - 4.*counts 
@@ -282,7 +281,7 @@ var WavesRenderer = function(callback, debug){
     }
 
     if(debug){
-        gl = this.gl = WebGLDebugUtils.makeDebugContext(gl, throwOnGLError, validateNoneOfTheArgsAreUndefined);
+        //gl = this.gl = WebGLDebugUtils.makeDebugContext(gl, throwOnGLError, validateNoneOfTheArgsAreUndefined);
         this.debug_show_off_canv();
     }
 
@@ -523,7 +522,7 @@ WavesRenderer.prototype.set_voltage_data = function(prepared_voltage_data){
 WavesRenderer.prototype._prepare_render_metrics = function(okeys, from_t, to_t){
     // okeys is an array of objs, each with .akey property that gives a akey.
 
-    var okeys = [null].concat(Array.from(okeys)); // if it was a set, then make it an array with well-defined order
+    okeys = [null].concat(Array.from(okeys)); // if it was a set, then make it an array with well-defined order
                                                   // also, make the 0th okey null, because we render the rubbish in that
                                                   // bit of the canvas.
 
@@ -532,12 +531,12 @@ WavesRenderer.prototype._prepare_render_metrics = function(okeys, from_t, to_t){
     // instead we render small slices from t to t+something. 
     // the question is, how big is that something?
 
-    var n_okeys = okeys.length;
-    var n_rows = Math.floor(off_canv_h/(off_canv_wave_h+off_canv_wave_gap)); // TODO: we should really have a vertical gap between waves
+    let n_okeys = okeys.length;
+    let n_rows = Math.floor(off_canv_h/(off_canv_wave_h+off_canv_wave_gap)); // TODO: we should really have a vertical gap between waves
 
-    var success = false;
-    var n_cols;
-    for(var batch_t=to_t-from_t; batch_t>3; batch_t = Math.ceil(batch_t/2)){
+    let success = false;
+    let n_cols, batch_t;
+    for(batch_t=to_t-from_t; batch_t>3; batch_t = Math.ceil(batch_t/2)){
         n_cols = Math.floor(off_canv_w/(batch_t*off_canv_dt + off_canv_wave_gap));
         if(n_okeys <= n_cols * n_rows){
             success = true;
@@ -550,8 +549,8 @@ WavesRenderer.prototype._prepare_render_metrics = function(okeys, from_t, to_t){
     }
 
     // Now we compute that offsets for each okey, in both pixel coordinates
-    var x_offset = new Uint16Array(n_rows*n_cols);
-    var y_offset = new Uint16Array(n_rows*n_cols);
+    let x_offset = new Uint16Array(n_rows*n_cols);
+    let y_offset = new Uint16Array(n_rows*n_cols);
     
     for(let row=0, p=0; row<n_rows; row++){
         for(let col=0; col<n_cols; col++, p++){
@@ -560,12 +559,28 @@ WavesRenderer.prototype._prepare_render_metrics = function(okeys, from_t, to_t){
         }
     }
 
+    // We could have done the following in the above loop, but hey, we use a second loop...
+
+    // convert x and y offsets to 8-bit, which are the values to be passed to the vertex-shader.
+    // Then convert the rounded values back to pixels, thus correcting the pixel values to match the
+    // rounding errors involved.
+    let xy_offset_gl_i8 = new Uint8Array(x_offset.length*2);
+    for(let p=0; p<x_offset.length; p++){
+        let x_gl = 0 | (x_offset[p]/off_canv_w * 256);
+        let y_gl = 0 | ((y_offset[p] + off_canv_wave_h/2)/off_canv_h * 256); 
+        xy_offset_gl_i8[p*2] = x_gl;
+        xy_offset_gl_i8[p*2+1] = y_gl;
+        let y_gl_11 = (y_gl*(1/128) -1); // value on interval [-1 to 1]
+        y_offset[p] =  Math.max(0, (y_gl_11+1)*off_canv_h/2 - off_canv_wave_h/2);
+    }
+
     return {
         from_t: from_t,
         to_t: to_t,
         batch_t: batch_t,
         x_offset: x_offset,
         y_offset: y_offset,
+        xy_offset_gl_i8: xy_offset_gl_i8,
         okeys: okeys
     }
 }
@@ -580,13 +595,7 @@ WavesRenderer.prototype._upload_okey_data = function(){
     var render_metrics = this._render_metrics;
     var okeys = render_metrics.okeys; // 0th entry is null,  because offsets are reserved for rubbish
 
-    var xy_offset_gl_i8 = new Uint8Array(render_metrics.x_offset.length*2);
-    var xy_offset_gl_i16 = new Uint16Array(xy_offset_gl_i8.buffer);  
-
-    for(var p=0; p<render_metrics.x_offset.length; p++){
-        xy_offset_gl_i8[p*2] = render_metrics.x_offset[p]/off_canv_w * 256;
-        xy_offset_gl_i8[p*2+1] = (render_metrics.y_offset[p] + off_canv_wave_h/2)/off_canv_h * 256;
-    }
+    var xy_offset_gl_i16 = new Uint16Array(render_metrics.xy_offset_gl_i8.buffer);  
 
     if(this._mode === 'density'){
         // just need to provide x and y
@@ -615,7 +624,7 @@ WavesRenderer.prototype._upload_okey_data = function(){
             let xy = xy_offset_gl_i16[ii];
             let gx = okeys[ii].group_num |  (xy << 8); 
             let yg = ((0xff00 & xy) >>> 8) | (okeys[ii].group_num << 8);
-            for(var jj=0; jj<inds.length; jj++){
+            for(let jj=0; jj<inds.length; jj++){
                 data_i16[inds[jj]*3 +0] = xy;
                 data_i16[inds[jj]*3 +1] = gx;
                 data_i16[inds[jj]*3 +2] = yg;
@@ -671,7 +680,8 @@ WavesRenderer.prototype._deal_with_modified_okeys = function(okeys_modified){
                 main_has_canv: false
             };
             part.el_canv.width = off_canv_dt*n_c*(n_w-1);
-            part.el_canv.height = off_canv_wave_h;
+            part.el_canv.height = on_canv_h;
+            part.el_canv.style.width = part.el_canv.width  + "px"; // if managed-canvas sets the height then this will hold the width fixed
             part.ctx = part.el_canv.getContext('2d');
             this._okey_to_part_rendered.set(okey, part);
             this._n_t_to_okeys[0].add(okey);
@@ -722,7 +732,8 @@ WavesRenderer.prototype.update_okeys = function(okeys_to_remove, okeys_to_add, o
         }
         this._okey_to_part_rendered.set(okey, part);
         part.el_canv.width = off_canv_dt*n_c*(n_w-1);
-        part.el_canv.height = off_canv_wave_h;
+        part.el_canv.height = on_canv_h;
+        part.el_canv.style.width = part.el_canv.width  + "px";  // if managed-canvas sets the height then this will hold the width fixed
         part.ctx = part.el_canv.getContext('2d');
         this._n_t_to_okeys[0].add(okey);
         results.set(okey, part.el_canv);
@@ -824,7 +835,7 @@ WavesRenderer.prototype._timer_tick = function(){
         let okey = okeys[ii];
         let part = this._okey_to_part_rendered.get(okey);
         part.ctx.drawImage(this.el_off_canv, x_offsets[ii], off_canv_h - 1 - y_offsets[ii] - off_canv_wave_h,
-                            width, off_canv_wave_h, part.n_t*off_canv_dt, 0, width, off_canv_wave_h);
+                            width, off_canv_wave_h, part.n_t*off_canv_dt, 0, width, on_canv_h);
     }
 
     // record that the okeys have now increaed their n_t
@@ -893,13 +904,13 @@ WavesRenderer.prototype._timer_tick = function(){
 WavesRenderer.prototype._render_batch_flag = function(from_t, end_t){
     var gl = this.gl;
     gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT); 
+    gl.bindBuffer(gl.ARRAY_BUFFER, this._buf_voltage);
 
     for(let t=from_t; t<end_t; t++){
         gl.uniform1f(this._locs_flag.t_x_offset, off_canv_dt*(t-from_t)/off_canv_w*2); 
 
         // bind the voltage buffer with data for (t,t+1) and render it
-        gl.bindBuffer(gl.ARRAY_BUFFER, this._buf_voltage);
-        gl.vertexAttribPointer(this._locs_density_1.voltage, 1, gl.BYTE, false, 1, t*this._n*2); 
+        gl.vertexAttribPointer(this._locs_flag.voltage, 1, gl.BYTE, false, 1, t*this._n*2); 
         gl.drawArrays(gl.LINES, 0, 2*this._n); 
     }
 }
@@ -908,12 +919,12 @@ WavesRenderer.prototype._render_batch_density = function(from_t, end_t){
     this._switch_to_density_1_prog();
     var gl = this.gl;
     gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT); 
+    gl.bindBuffer(gl.ARRAY_BUFFER, this._buf_voltage);
 
     for(let t=from_t; t<end_t; t++){
         gl.uniform1f(this._locs_density_1.t_x_offset, off_canv_dt*(t-from_t)/off_canv_w*2); 
 
         // bind the voltage buffer with data for (t,t+1) and render it
-        gl.bindBuffer(gl.ARRAY_BUFFER, this._buf_voltage);
         gl.vertexAttribPointer(this._locs_density_1.voltage, 1, gl.BYTE, false, 1, t*this._n*2); 
         gl.drawArrays(gl.LINES, 0, 2*this._n); 
     }
@@ -924,7 +935,7 @@ WavesRenderer.prototype._render_batch_density = function(from_t, end_t){
 
 WavesRenderer.prototype.mask_at_vt = function(inds, point){
     let t = 0 | (point[1] / off_canv_dt);
-    let v = 0 | (127 - (point[0] /off_canv_wave_h)*255);
+    let v = 0 | (127 - (point[0] /on_canv_h)*255);
     let m = new Uint8Array(inds.length);
     let vdata = new Int8Array(this._voltage_data.buffer);
     let n = this._n;
