--- a/index_full.html
+++ b/index_full.html
@@ -762,7 +762,6 @@ wav._grab_group = function(e){
         this.set('grabbed_tiles', []);
     }
 
-    // for simplicity we make new canvases for this tile
     let cm = Utils.canvas_manager;
     let group = e.detail.group;
     this.push('grabbed_tiles', {
@@ -771,11 +770,13 @@ wav._grab_group = function(e){
                 "c" + group.group_num + " [Grabbed]",
         group_num: group.group_num,
         group: {
-            waves: cm.clone_ckey(group.waves),
-            tac: cm.clone_ckey(group.tac),
-            rm_spa: cm.clone_ckey(group.rm_spa),
-            rm_dir: cm.clone_ckey(group.rm_dir),
-            rm_speed: cm.clone_ckey(group.rm_speed)
+            waves: cm.clone_ckey(group.waves), 
+            tac: group.tac,
+            rm: {
+              spa: group.rm.spa,
+              dir: group.rm.dir,
+              speed: group.rm.speed  
+            }
         },
         x: e.detail.src_client_x + 20,
         y: e.detail.src_client_y + 20
@@ -882,6 +883,8 @@ wav.show_tap = function(e){
     wav.toggle_show(e.target.id, e.detail.sourceEvent.shiftKey);
     e.preventDefault(); 
 }
+
+// :::: initialize application ::::::::::::::::::::::
 
 wav.addEventListener('dom-change', function(){
     // remove keyboard handlers from buttons. Note that ripple still shows.
